--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
         </div>
     </div>
     <!-- ---------end of c9----------- -->
-    <div class="container-fluid c10">
+    <div class="c10">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -583,16 +583,18 @@
                     </div>
                 </div>
                 <div class="col-md-8">
-                    <div class="row align-items-center">
-                        <div class="col-md-4">
-                            <div class="inside">
-                                <h3>NEWSLETTER SIGN-UP</h3>
-                                <p>Latest updates and news</p>
+                    <div class="apove">
+                        <div class="row align-items-center">
+                            <div class="col-md-4">
+                                <div class="inside">
+                                    <h3>NEWSLETTER SIGN-UP</h3>
+                                    <p>Latest updates and news</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="elinput">
-                                <input type="text">
+                            <div class="col-md-8 ">
+                                <div class="elinput">
+                                    <input type="text">
+                                </div>
                             </div>
                         </div>
                     </div>
